[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Levels/Level0.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/TransitionScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/SceneManager.gd" type="Script" id=3]
[ext_resource path="res://Music & SFX/Lofi Geek - Peace.mp3" type="AudioStream" id=4]

[node name="SceneManager" type="Node2D"]
script = ExtResource( 3 )

[node name="CurrentScene" type="Node2D" parent="."]

[node name="Level0" parent="CurrentScene" instance=ExtResource( 1 )]

[node name="TransitionScreen" parent="." instance=ExtResource( 2 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
